fix(metadata): ensure long words in ie object title get wrapped
example:  https://qas.hetarchief.be/pid/qss756fh48

--- a/src/modules/ie-objects/components/ObjectDetailPageMetadata/ObjectDetailPageMetadata.module.scss
+++ b/src/modules/ie-objects/components/ObjectDetailPageMetadata/ObjectDetailPageMetadata.module.scss
@@ -56,6 +56,10 @@ $maintainer-logo-height: 7rem;
 	}
 }
 
+.p-object-detail__title {
+	overflow-wrap: break-word;
+}
+
 .p-object-detail__metadata-maintainer-title {
 	display: flex;
 	flex-direction: row;
